starter/route-green.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: atendimento
spec:
  to:
    kind: Service
    name: atendimento-green
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
